--- a/pom.xml
+++ b/pom.xml
@@ -133,11 +133,11 @@
                 </configuration>
             </plugin>
 		<!-- CODE COVERAGE -->
-		    <plugin>
+		    <!-- <plugin>
                      <groupId>org.apache.maven.plugins</groupId>
                      <artifactId>maven-war-plugin</artifactId>
                      <version>3.2.2</version>
-                    </plugin>
+            </plugin> -->
  		    <plugin>
  		        <groupId>org.jacoco</groupId>
  		        <artifactId>jacoco-maven-plugin</artifactId>
