--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,11 @@
                      <artifactId>maven-war-plugin</artifactId>
                      <version>3.2.2</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.1.0</version>
+            </plugin>  
  		    <plugin>
  		        <groupId>org.jacoco</groupId>
  		        <artifactId>jacoco-maven-plugin</artifactId>
